--- a/debian.master/changelog
+++ b/debian.master/changelog
@@ -1,3 +1,9 @@
+linux (2.6.34-r5.netdccp.1.freezedccp.1) karmic; urgency=low
+
+  * Net:DCCP Git tree with Freeze-DCCP/TFRC patches.
+
+ -- Olivier Mehani <Olivier Mehani@nicta.com.au>  Sat, 15 May 2010 07:41:45 +0000
+
 linux (2.6.34-r5.netdccp.1) karmic; urgency=low
 
   * Net:DCCP Git tree.
